[tool.poetry]
name = "solanaexporter"
version = "0.7.0"
description = "A Prometheus exporter for monitoring Solana validators."
authors = ["Axel Lode <al@blocksize-capital.com>"]

[tool.poetry.dependencies]
python = "^3.9"
prometheus_client = "^0.11.0"
requests = "^2.26.0"
pre-commit = "^4.0.1"
pytest-cov = "^5.0.0"
flask = "^3.0.3"
solana = "^0.35.1"
requests-mock = "^1.12.1"
mypy = "^1.13.0"
pydocstyle = "^6.3.0"
pylint = "^3.3.1"
exporter = { git = "https://github.com/BSC-aujl/RPCexporter.git", branch = "main" }

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-mock = "^3.6.1"
safety = "^3.2.11"

[tool.autoflake]
profile = "black"
remove-all-unused-imports = true
remove-unused-variables = true
in-place = true

[tool.black]
target-version = ["py311"]
line-length = 96

[tool.autopep8]
max_line_length = 96
profile = "black"
ignore = "E501,W6"  # or ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = [
    "solanaexporter/tests"
]
addopts = "--ignore=venv --ignore=.venv --disable-warnings --cov=solanaexporter --cov-fail-under=70"

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true
exclude = "(venv|\\.venv|tests)"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
